traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:4: error: not found: value Direction
  while (!(getDirection()==Direction.NORD)){gauche(); tourne= tourne + 1}
                           ^TraversalByColumn:14: error: not found: value Direction
  while (!(getDirection()==Direction.EST)){gauche(); tourne = tourne + 1 }
                           ^TraversalByColumn:27: error: value hauteur is not a case class, nor does it have an unapply/unapplySeq member
    case (_,hauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
            ^